--- a/src/components/Slide/Slide.module.scss
+++ b/src/components/Slide/Slide.module.scss
@@ -9,6 +9,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    //tạo lớp phủ ở trên slide-item tạo cảm giác tối:
     &::before {
         content: '';
         position: absolute;
@@ -65,10 +66,24 @@
 .slide-btn,
 .slide-title,
 .slide-overview {
-    opacity: 0;
-    transform: translateY(-100px);
-    transition: transform 0.1s ease, opacity 0.1s ease;
-    transition-delay: 1s;
+    // opacity: 0;
+    // transform: translateY(-100px);
+    // // transition-delay: 1s;
+}
+.active .slide-infor {
+    .slide-btn,
+    .slide-title,
+    .slide-overview {
+        // opacity: 1;
+        // transform: translateY(0);
+        // transition: transform 0.1s ease, opacity 0.1s ease;
+    }
+    .slide-title {
+    }
+    .slide-overview {
+    }
+    .slide-btn {
+    }
 }
 
 .slide-poster {
@@ -79,32 +94,26 @@
         display: none;
     }
 }
-.slide-img {
-    width: 400px;
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    transform: scale(0);
-    transition: transform 0.1s ease;
-    transition-delay: 1s;
-}
 
-.active .slide-img {
-    transform: scale(1);
-}
-.active .slide-infor {
-    .slide-btn,
-    .slide-title,
-    .slide-overview {
+@keyframes slideAnime {
+    from {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    to {
         opacity: 1;
         transform: translateY(0);
     }
-    .slide-title {
-        transition-delay: 0.3s 0.3s;
-    }
-    .slide-overview {
-        transition-delay: 0.6s 0.6s;
-    }
-    .slide-btn {
-        transition-delay: 0.9s 0.9s;
-    }
+}
+.slide-img {
+    // width: 400px;
+    // border-radius: var(--border-radius);
+    // box-shadow: var(--box-shadow);
+    // transform: scale(0);
+    // // transition-delay: 1s;
+}
+
+.active .slide-img {
+    // transform: scale(1);
+    // transition: transform 0.1s ease;
 }
